test/cherry/Language/list_tensor_lowering_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  const w1: Float32[2] = [1.0, 2.0];
  const w2: Float32[2] = [3.0, 4.0];
  const weights: List<Float32[2]> = [w1, w2];
  const weightAlias: List<Float32[2]> = weights;
  0
}

# CHECK: error: List<Tensor> lowering only supports list literals
